--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 numpy = "^1.26.3"
+llama-index = "^0.9.42.post1"
+arxiv = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
