--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "arial"
+name = "rad"
 version = "0.1.0"
-description = "accessible rich internet agent llm"
+description = "rag enabled assistants for disabilities"
 authors = [
   "John Cocjin <fill in>",
   "Shota Makino <shotes.makino@gmail.com>"
