vectara works with open-ai; looking to integrate w other models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ python = "^3.12"
 numpy = "^1.26.3"
 llama-index = "^0.9.42.post1"
 arxiv = "^2.1.0"
+python-dotenv = "^1.0.1"
+setuptools = "^69.0.3"
+distribute = "^0.7.3"
+llama-cpp-python = "^0.2.38"
+transformers = "^4.37.2"
+torch = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
