--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,17 @@ readme = "README.md"
 python = "^3.12"
 numpy = "^1.26.3"
 llama-index = "^0.9.42.post1"
-arxiv = "^2.1.0"
+arxiv = { version = "^2.1.0", optional = true }
 python-dotenv = "^1.0.1"
 setuptools = "^69.0.3"
 distribute = "^0.7.3"
-llama-cpp-python = "^0.2.38"
-transformers = "^4.37.2"
-torch = "^2.2.0"
+llama-cpp-python = { version = "^0.2.38", optional = true }
+transformers = { version = "^4.37.2", optional = true }
+torch = { version = "^2.2.0", optional = true }
 
+[tool.poetry.extras]
+local_llm=["llama-cpp-python", "transformers", "torch"]
+data=["arxiv"]
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
