--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 numpy = "^1.26.3"
-llama-index = "^0.9.42.post1"
+llama-index = {git = "https://github.com/run-llama/llama_index.git"}
 arxiv = { version = "^2.1.0", optional = true }
 python-dotenv = "^1.0.1"
 setuptools = "^69.0.3"
