--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "llama-app-frontend",
+  "name": "rad-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -36,7 +36,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
     "@types/eslint": "^8.37.0",
     "@types/lodash": "^4.14.195",
     "@types/lodash.debounce": "^4.0.7",
