--- a/render.yaml
+++ b/render.yaml
@@ -32,12 +32,13 @@ services:
     region: oregon
     plan: standard
     rootDir: ./backend
+    # below (scaling) options not available for individual users
     # https://render.com/docs/blueprint-spec#scaling
-    scaling:
-      minInstances: 1
-      maxInstances: 2
-      targetMemoryPercent: 75 # optional if targetCPUPercent is set (valid: 1-90)
-      targetCPUPercent: 75 # optional if targetMemory is set (valid: 1-90)
+    # scaling:
+    #   minInstances: 1
+    #   maxInstances: 2
+    #   targetMemoryPercent: 75 # optional if targetCPUPercent is set (valid: 1-90)
+    #   targetCPUPercent: 75 # optional if targetMemory is set (valid: 1-90)
     healthCheckPath: /api/health/
     initialDeployHook: make seed_db_based_on_env
     envVars:
