restarting fe build - going to use new next app

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rad-frontend",
+  "name": "llama-app-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -36,11 +36,12 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/eslint": "^8.37.0",
     "@types/lodash": "^4.14.195",
     "@types/lodash.debounce": "^4.0.7",
     "@types/md5": "^2.3.2",
-    "@types/node": "^20.11.16",
+    "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
