access key updates

--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     env: node
     rootDir: ./frontend
     plan: starter
-    buildCommand: yarn; yarn build
+    buildCommand: yarn; yarn build --debug
     startCommand: yarn start
     autoDeploy: false
     envVars:
