--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@wojtekmaj/react-hooks": "^1.18.1",
+    "classnames": "^2.5.1",
+    "downshift": "^8.3.1",
+    "fuse.js": "^7.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "md5": "^2.3.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0",
-    "tailwindcss": "^3.3.0"
+    "react-ga4": "^2.1.0",
+    "react-github-btn": "^1.4.0",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.6.0",
+    "react-pdf": "^7.7.0",
+    "react-select": "^5.8.0",
+    "react-window": "^1.8.10",
+    "tailwindcss": "^3.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/eslint": "^8.56.2",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "typescript": "^5"
   }
 }
