--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "llama-app-backend"
+name = "rad-backend"
 version = "0.1.0"
-description = "Backend for Llama App"
-authors = ["Sourabh Desai <sourabhdesai@gmail.com>"]
+description = "Backend for Rad App"
+authors = []
 readme = "README.md"
 packages = [{include = "app"}]
 
