--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://user:password@127.0.0.1:5432/llama_app_db
+DATABASE_URL=postgresql://user:password@127.0.0.1:5432/rad
 BACKEND_CORS_ORIGINS='["http://localhost", "http://localhost:8000", "http://localhost:3000", "http://127.0.0.1:3000", "https://llama-app-backend.onrender.com", "https://llama-app-frontend.vercel.app", "http://secinsights.ai", "http://www.secinsights.ai", "https://secinsights.ai", "https://www.secinsights.ai"]'
 OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXX
 LOG_LEVEL=debug
