--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
 run:
 	echo "Running in local mode."
-	docker compose create db localstack
-	docker compose start db localstack
+	docker compose create db
+	docker compose start db
 	poetry run start
 
 run_docker:
@@ -34,28 +34,6 @@ test:
 chat:
 	poetry run python -m scripts.chat_llama
 
-setup_localstack:
-	docker compose create localstack
-	docker compose start localstack
-	echo "Waiting for localstack to start..."
-	# Ping http://localhost:4566/health until we get a 200 response
-	until $$(curl --output /dev/null --silent --head --fail http://localhost:4566/_localstack/health); do \
-		printf '.'; \
-		sleep 0.5; \
-	done
-	# Check that S3_ASSET_BUCKET_NAME is set
-	if [ -z ${S3_ASSET_BUCKET_NAME} ]; then \
-		echo "S3_ASSET_BUCKET_NAME is not set. Please set it and try again."; \
-		exit 1; \
-	fi
-	awslocal s3 mb s3://${S3_ASSET_BUCKET_NAME}
-	echo "<html>LocalStack S3 bucket website is alive</html>" > /tmp/index.html
-	awslocal s3 cp /tmp/index.html s3://${S3_ASSET_BUCKET_NAME}/index.html
-	rm /tmp/index.html
-	awslocal s3 website s3://${S3_ASSET_BUCKET_NAME}/ --index-document index.html
-	awslocal s3api put-bucket-cors --bucket ${S3_ASSET_BUCKET_NAME} --cors-configuration file://./localstack-cors-config.json
-	echo "LocalStack S3 bucket website is ready. Open http://${S3_ASSET_BUCKET_NAME}.s3-website.localhost.localstack.cloud:4566 in your browser to verify."
-
 seed_db_based_on_env:
 	# Call either seed_db or seed_db_preview, seed_db_local based on the environment
 	# This is used by the CI/CD pipeline
@@ -82,5 +60,4 @@ seed_db_local:
 	echo "Seeding database for local."
 	docker compose create db
 	docker compose start db
-	make setup_localstack
 	python scripts/seed_db.py --ciks '["0001018724", "1326801"]'  --filing_types '["10-K"]'
