--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,11 @@
-{}
+{
+    "search.exclude": {
+      "frontend/**/.yarn": true,
+      "frontend/**/.pnp.*": true
+    },
+    "eslint.nodePath": "frontend/.yarn/sdks",
+    "prettier.prettierPath": "frontend/.yarn/sdks/prettier/index.cjs",
+    "typescript.tsdk": "frontend/.yarn/sdks/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true
+  }
+  
