--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,32 +9,17 @@ WORKDIR /app
 RUN yarn set version stable; yarn install;
 
 # Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* .yarnrc.yml* .pnp.cjs* ./
-RUN \
-    if [ -f yarn.lock ]; then yarn --immutable; \
-    elif [ -f package-lock.json ]; then npm ci; \
-    elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm i --frozen-lockfile; \
-    else echo "Lockfile not found." && exit 1; \
-    fi
+COPY package.json yarn.lock* .yarnrc.yml* .pnp.cjs* ./
+RUN yarn --immutable
 
 
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
-COPY --from=deps /app/.pnp.cjs ./pnp.cjs
+COPY --from=deps /app/.pnp.cjs ./.pnp.cjs
 COPY . .
 
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN \
-    if [ -f yarn.lock ]; then yarn run build; \
-    elif [ -f package-lock.json ]; then npm run build; \
-    elif [ -f pnpm-lock.yaml ]; then corepack enable pnpm && pnpm run build; \
-    else echo "Lockfile not found." && exit 1; \
-    fi
+RUN yarn build
 
 # Production image, copy all the files and run next
 FROM base AS runner
