docker update and schema

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -3,11 +3,12 @@ BACKEND_CORS_ORIGINS='["http://localhost", "http://localhost:8000", "http://loca
 OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXX
 LOG_LEVEL=debug
 RENDER=False
-S3_BUCKET_NAME=llama-app-backend-local
-S3_ASSET_BUCKET_NAME=llama-app-web-assets-local
+S3_BUCKET_NAME=rad-objects
+S3_ASSET_BUCKET_NAME=rad-web-assets-local
 CDN_BASE_URL=http://llama-app-web-assets-local.s3-website.localhost.localstack.cloud:4566
-AWS_KEY=xxx
-AWS_SECRET=xxx
+MINIO_ACCESS=xxx
+MINIO_SECRET=xxx
+
 POLYGON_IO_API_KEY=xxx
 SEC_EDGAR_COMPANY_NAME=YourOrgName
 SEC_EDGAR_EMAIL=you@example.com
