--- a/render.yaml
+++ b/render.yaml
@@ -122,7 +122,7 @@ envVarGroups:
     - key: LOG_LEVEL
       value: INFO
     - key: BACKEND_CORS_ORIGINS
-      value: '["http://localhost", "http://localhost:8000", "http://localhost:3000", "http://127.0.0.1:3000", "https://rad-backend.onrender.com", "https://rad-frontend.onrender.com", "http://secinsights.ai", "http://www.secinsights.ai", "https://secinsights.ai", "https://www.secinsights.ai"]'
+      value: '["http://localhost", "http://localhost:8000", "http://localhost:3000", "http://127.0.0.1:3000", "https://rad-backend.onrender.com", "https://rad-frontend.onrender.com", "http://rad-backend.onrender.com", "http://www.rad-backend.onrender.com", "https://rad-backend.onrender.com", "https://www.rad-backend.onrender.com"]'
     # S3_BUCKET_NAME is the bucket used for the StorageContext of the backend's LlamaIndex chat engine
     - key: S3_BUCKET_NAME
       value: rad-objects
