--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://user:password@127.0.0.1:5432/rad
-BACKEND_CORS_ORIGINS='["http://localhost", "http://localhost:8000", "http://localhost:3000", "http://127.0.0.1:3000", "https://llama-app-backend.onrender.com", "https://llama-app-frontend.vercel.app", "http://secinsights.ai", "http://www.secinsights.ai", "https://secinsights.ai", "https://www.secinsights.ai"]'
+BACKEND_CORS_ORIGINS='["http://localhost", "http://localhost:8000", "http://localhost:3000", "http://127.0.0.1:3000", "https://rad-backend.onrender.com", "https://rad-frontend.onrender.com", "http://rad-backend.onrender.com", "http://www.rad-backend.onrender.com", "https://rad-backend.onrender.com", "https://www.rad-backend.onrender.com"]'
 OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXX
 LOG_LEVEL=debug
 RENDER=False
