--- a/backend/.env.development
+++ b/backend/.env.development
@@ -12,3 +12,6 @@ MINIO_SECRET=xxx
 POLYGON_IO_API_KEY=xxx
 SEC_EDGAR_COMPANY_NAME=YourOrgName
 SEC_EDGAR_EMAIL=you@example.com
+VECTARA_API_TOKEN=
+VECTARA_CORPUS_ID=
+VECTARA_CUSTOMER_ID=
